--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "localhost:1313"
+baseURL = "https://main--vivint-nd.netlify.app"
 languageCode = "en-us"
 paginate = 6
 title = "Vivint Smart Home"
