--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://vivint-nd.netlify.app"
+baseURL = "https://northdallas.pro/"
 languageCode = "en-us"
 paginate = 6
 title = "Vivint Smart Home"
