--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://northdallas.pro/"
+baseURL = "https://thesmarthome.pro"
 languageCode = "en-us"
 paginate = 6
 title = "Vivint Smart Home"
