--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tinacms build && hugo"
+    "build": "npx tinacms build && hugo"
   },
   "repository": {
     "type": "git",
